# smartcanteen-

./: .gitignore  Dockerfile  README.md  celeryMQ.txt  db.sqlite3  docker-commands.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  role.txt  todo.txt
base/: admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_alter_course_name.py  0002_alter_customuser_groups_and_more.py  0002_rename_userprofile_administration_and_more.py  0003_alter_breaktime_course_alter_orders_status.py  0003_alter_menu_menu_items.py  0003_rename_order_orders_alter_menuschedule_options_and_more.py  0004_orders_order_time_orders_status.py  0004_rename_menuitem_fooditem_rename_menuschedule_menu.py  0005_alter_breaktime_options_alter_orders_options_and_more.py
base/templatetags/: form_filters.py
canteen/: a.py  db.sqlite3  error_users.txt  whole.json
canteen/base/: admin.py  apps.py  decorators.py  models.py  signals.py  tasks.py  urls.py  views.py
canteen/base/migrations/: 0001_initial.py  0002_alter_customuser_groups_and_more.py  (+4 more)
canteen/core/: celery.py  settings.py  urls.py
canteen/db/: db.sqlite3
canteen/templates/: profile.html
core/: celery.py  settings.py  urls.py
scripts/: entrypoint.sh
static/styles/: home.css  styles.css
templates/: home.html
templates/base/: base.html  nav.html
templates/dashboards/: admin.html  day_menu.html  orders.html  semesters.html  staff.html  week_menu.html
templates/login/: login.css  login.html
templates/signup/: signup.html
(+33 files in other folders)
