[tool.poetry]
name = "smartcateen"
version = "0.1.0"
description = ""
authors = ["sudipthon <sudip00kc@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
amqp = "5.2.0"
asgiref = "3.8.1"
billiard = "4.2.0"
celery = "5.4.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
django = "5.0.7"
et-xmlfile = "1.1.0"
kombu = "5.3.7"
numpy = "2.0.1"
openpyxl = "3.1.5"
pandas = "2.2.2"
prompt-toolkit = "3.0.47"
psycopg2-binary = "2.9.9"
python-dateutil = "2.9.0.post0"
python-decouple = "3.8"
pytz = "2024.1"
six = "1.16.0"
sqlparse = "0.5.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
vine = "5.1.0"
wcwidth = "0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
